2009-03-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* docs/es/figures/*.png: Deleted duplicated screenshots

==================== 2.26.0 ======================

2009-03-16  Petr Kovar  <pknbe@volny.cz>

	* docs/cs/cs.po: Added Czech translation by Lucas Lommer.
	* docs/Makefile.am: Added cs to DOC_LINGUAS.

==================== 2.25.92 ======================

==================== 2.25.91 ======================

==================== 2.25.90 ======================

2009-01-26  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c: Deprecated symbol removal. Patch from Maxim Ermilov,
	see bug 562520.

2009-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am
	* applet.c: Replace gnome_program_locate_file now that we're not
	#including any gnome headers. Bug 567779.

==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-09-09  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (accessx_status_applet_get_glyph_pixbuf): Patch from
	Matt Keenan to avoid a crash when a colormap isn't present. (Bug
	#549722)

2008-07-06  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Added Korean document translation.
	* docs/Makefile.am: Added ko to DOC_LINGUAS.

2008-04-11  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Fix the launching of the
	gnome-keyboard-properties dialog. Patch from Matthias Clasen (bug
	#517500).

2008-03-02  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Make allowance for the disappearance of
	gnome-accessibility-keyboard-properties and its movement to