@@ -1,3 +1,8 @@
+2009-03-31  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (accessx_applet_add_stock_icons): Make the icon loading
+	code actually work. Fixes bug 576707.
+
 2009-03-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* docs/es/figures/*.png: Deleted duplicated screenshots
